--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ large_files
 large_files/*
 large_files/fashion-dataset/*
 large_files/fashion-dataset/fashion-dataset.zip
+!large_files/ml/feature_extractor_model.keras
+!large_files/ml/all_features.npy
