--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ large_files/ml/feature_extractor_model.keras filter=lfs diff=lfs merge=lfs -text
 large_files/ml/all_features.npy filter=lfs diff=lfs merge=lfs -text
 large_files/ml/feature_extractor_model.keras filter=lfs diff=lfs merge=lfs -text
 large_files/ml/all_features.npy filter=lfs diff=lfs merge=lfs -text
+large_files/ml/feature_extractor_model.h5 filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
